[package]
name = "syscall-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
iced-x86 = { version = "1.21.0", features = ["code_asm"] }
object = { version = "0.35.0", features = ["write"] }
once_cell = "1.19.0"
rand = "0.8.5"
regalloc2 = "0.9.3"
